--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
     background: -moz-linear-gradient(-45deg, #004098 0%, #005CDB 41%, #006BFF 100%);
     background: -webkit-linear-gradient(-45deg, #004098 0%, #005CDB 41%, #006BFF 100%);
     background: linear-gradient(135deg, #004098 0%, #005CDB 41%, #006BFF 100%);
+    background-repeat: no-repeat;
 }
 
 .title {
@@ -47,4 +48,10 @@
     border-radius: 9px; 
     border-color: hsl(0, 0%, 100%);
     display: inline-block;
+}
+
+.aside{
+    text-align: left;
+    padding-left: 30;
+    
 }
