--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
     background: -webkit-linear-gradient(-45deg, #004098 0%, #005CDB 41%, #006BFF 100%);
     background: linear-gradient(135deg, #004098 0%, #005CDB 41%, #006BFF 100%);
     background-repeat: no-repeat;
+    color: white;
 }
 
 .title {
@@ -50,8 +51,7 @@
     display: inline-block;
 }
 
-.aside{
-    text-align: left;
-    padding-left: 30;
-    
+
+table{
+    border-color: white;
 }
